main.css
/*CSS for comics page for tf2*/
html {
  overflow-x: hidden;
}
body {
  background-color: #262323;
  background-repeat: repeat-y;
  background-position: center;
  margin: 0;
  padding: 0;
  font-family: Host Grotesk;
  overflow-x: hidden;
}

p {
  font-family: Host Grotesk;
}

#title {
  width: calc(100% - 339px);
  height: 60vh;
  margin: 0 auto;
  padding: 2%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#title a {
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-family: BigNoodleTitling;
  width: 100%;
}

#titleImage {
  width: 20%;
  max-height: 60vh;
  display: inline-block;
  flex-shrink: 0;
  filter: drop-shadow(11px 18px 5px #000000);
  min-width: 350px;
}

#titleImageContainer {
  width: max-content;
}

#titleText {
  display: inline-block;
  flex-shrink: 0;
  font-family: BigNoodleTitling;
  font-size: 37px;
  width: 65%;
}

#socialMediaIcons {
  position: fixed;
  bottom: 20px;
  right: 40px;
  display: flex;
  justify-content: center;
  gap: 15px;
}

.buttonIcon {
  width: 100%;
  max-width: 50px;
  height: auto;
  display: inline-block;
  transition: transform 0.2s;
  filter: brightness(0) invert(99%) sepia(97%) saturate(106%) hue-rotate(302deg)
    brightness(93%) contrast(97%) drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.5));
}

.buttonIcon:hover {
  transform: translate(0, -1px);
  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.5))
    drop-shadow(0px 0px 2px #5865f2);
}

.buttonIcon img {
  height: 50px;
}

.warning {
  position: relative;
  width: 100%;
  text-align: center;
  font-size: 14pt;
  font-family: BigNoodleTitling;
  background-color: hsl(51, 78%, 42%);
  padding: 5px;
  margin: 0px !important;
}

#main {
  width: calc(100% - 330px);
  max-width: 1400px;
  margin: auto;
  overflow-x: hidden;
}

a,
a:hover,
a:visited,
a:active {
  color: #b35215;
}

a:hover {
  transform: translateY(-2px);
  transition: all 0.2s ease-in-out;
}

img {
  border: 0;
}

.boxshadowBox {
  width: 100%;
  height: 100%;
  box-shadow: 0 0 20px #000;
  overflow-x: hidden;
}

.textSubject {
  display: flex;
  padding: 1em;
  flex-direction: column;
  justify-content: flex-start;
}

.textSubject div {
  display: flex;
  flex-direction: row;
  align-items: baseline; /* This is a default, if it has to be different then it should be precised in the HTML style attribute. */
  justify-content: flex-start;
}

.textSubject div img {
  width: auto; /* Both size values are set to auto to keep aspect ratio, actual sizes have to be specified per element in the HTML. */
  height: auto;
}

.textSubject img {
  align-self: center;
  width: 40%;
  height: auto;
  min-width: 230px;
  max-width: 350px;
}

.textSubject p,
h1,
h2,
h3,
h4,
h5 {
  padding-left: 5%;
  padding-right: 5%;
  font-family: Host Grotesk;
}

#centerFooter {
  background-repeat: no-repeat;
  background-position: top center;
  text-align: center;
}
#footerContainer {
  margin: auto;
  text-align: left;
}

#footer {
  background: #231f20;
  color: #9b948e;
  position: relative;
  z-index: 0;
}
#footerContainer {
  max-width: 1200px;
  min-height: 100px;
  position: relative;
  padding: 16px;
  margin: auto;
  display: flex;
}
@media (max-width: 850px) {
  #footerContainer {
    flex-direction: column !important;
  }
}
#footerContainer > * {
  display: block;
  margin: 16px;
}
#footerLogo {
  width: 100%;
  height: 100%;
  max-width: 200px;
}
@media (max-width: 850px) {
  #footerLogo {
    margin: 16px auto 0 !important;
  }
}
#footerLogo img {
  display: block;
  margin: auto;
  width: 100%;
  max-width: 100%;
  border-radius: 3px;
}
#footerLogo img:hover {
  filter: drop-shadow(0px 0px 8px #000000);
}
#footerText p {
  font-family: Host Grotesk;
}

#footerContainer p {
  margin: 0;
  margin-bottom: 15px;
}
#footerContainer p:last-child {
  margin-bottom: 0;
}
#footerContainer a {
  text-decoration: none;
  color: #ff7c44;
}
#footerLinks {
  font-family: Host Grotesk;
  font-size: 14pt;
  letter-spacing: 2pt;
  display: inline-block;
  color: #ff7c44;
}
#footerLinks ul {
  margin: 0;
}
#footerLinks li {
  margin-bottom: 5px;
  display: list-item;
}
#footerVersion {
  margin-top: 15px !important;
  opacity: 50%;
  font-size: 80%;
}

#centerColumn {
  width: 100%;
  margin: auto;
  text-align: left;
  overflow-x: hidden;
}

#primaryHeaderArea {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  margin: auto;
  width: 100%;
  background-color: #c8c8be;
  border-radius: 5px 5px 0 0;
  position: relative;
  overflow: hidden;
}

/*
.halftoneBackground {	
  --dot: radial-gradient(closest-side, #777, #fff 75%);
  --pattern: var(--dot) 0 0/ 2em 2em, var(--dot) 1em 1em/ 2em 2em;
  --map: linear-gradient(45deg, #888, #fff);
  
  
	position: absolute;
  width:100%;
  height: 100%;

  mix-blend-mode: normal;
  background: var(--map), var(--pattern);
  background-blend-mode: multiply;
  filter: contrast(21);
}

.halftoneBackground::after {
  content: '';
  position: absolute;
  inset: 0;
  background: #ffb300;
  mix-blend-mode: color;
  pointer-events: none;
}
*/
/*
.halftoneBackground {	
  --dot: radial-gradient(closest-side, #777, #fff 75%);
  --pattern: var(--dot) 0 0/ 2em 2em, var(--dot) 1em 1em/ 2em 2em;
  --map: linear-gradient(45deg, #888, #fff);
  
  
	position: absolute;
  width:100%;
  height: 100%;

  mix-blend-mode: normal;
  background: var(--map), var(--pattern);
  background-blend-mode: multiply;
  filter: contrast(21);
}

.halftoneBackground::after {
  content: '';
  position: absolute;
  inset: 0;
  background: #ffb300;
  mix-blend-mode: color;
  pointer-events: none;
}
/* ... */

